--- a/Code/Practice_setOperations/set_operations.ui
+++ b/Code/Practice_setOperations/set_operations.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1081</width>
+    <width>1438</width>
     <height>806</height>
    </rect>
   </property>
@@ -15,147 +15,180 @@
   </property>
   <property name="styleSheet">
    <string notr="true">QWidget{
- background-color: rgb(255,246,233)
+ background-color: rgb(255,246,233);
+}
+
+QLabel{
+	background-color:rgb(73, 133, 168);
+	border-radius: 20%;
+	color: white;
+	font: 26pt &quot;Verdana&quot;;
+}
+
+QRadioButton{
+	background-color:white;
+	border-radius: 20%;
+	border: 1px solid black;
+	font: 22pt &quot;Verdana&quot;;
+}
+
+QRadioButton::hover{
+	background-color: rgb(221,221,221);
+}
+
+QRadioButton::indicator{
+	width: 70px;
+	height: 30px;
+	margin-left: 10px;
+}
+
+QRadioButton::indicator:checked{
+	image: url(/Users/adityaparashar/Education/UCL/ENGF0002/Scenario/Code/Practice_setOperations/radio-checked.png);
+}
+
+QRadioButton::indicator:unchecked{
+	image: url(/Users/adityaparashar/Education/UCL/ENGF0002/Scenario/Code/Practice_setOperations/radio-unchecked.png);
+}
+
+QPushButton{
+	background-color:rgb(73,133,168);
+	color:white;
+	border-radius: 30%;
+	font: 20pt &quot;Verdana&quot;;
+}
+
+QPushButton::hover{
+	background-color:rgb(93,153,168);
+	border: 2px solid black;
 }</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="question">
     <property name="geometry">
      <rect>
-      <x>129</x>
-      <y>75</y>
-      <width>691</width>
-      <height>71</height>
+      <x>170</x>
+      <y>40</y>
+      <width>1091</width>
+      <height>151</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QLabel{background-color:rgb(73, 133, 168)}</string>
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&amp;nbsp; &amp;nbsp; c wvjkenvrnwlkvnws&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="option1_button">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>230</y>
+      <width>881</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>nfwnvlkwnfwpv</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="option2_button">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>560</y>
+      <width>881</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QRadioButton" name="answer_1">
+   <widget class="QRadioButton" name="option3_button">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>190</y>
-      <width>691</width>
-      <height>41</height>
+      <x>200</x>
+      <y>340</y>
+      <width>881</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QRadioButton{background-color:rgb(255, 255, 255)}</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QRadioButton" name="answer_2">
+   <widget class="QRadioButton" name="option4_button">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>250</y>
-      <width>691</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QRadioButton{background-color:rgb(255, 255, 255)}</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="answer_3">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>310</y>
-      <width>691</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QRadioButton{background-color:rgb(255, 255, 255)}</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="answer_4">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>370</y>
-      <width>691</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QRadioButton{background-color:rgb(255, 255, 255)}</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="back_button">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
+      <x>200</x>
       <y>450</y>
-      <width>113</width>
-      <height>32</height>
+      <width>881</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton{
-background-color:rgb(73,133,168);
-color:white;
-
-}</string>
+     <string notr="true"/>
     </property>
     <property name="text">
-     <string>Back</string>
+     <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="next_button">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>450</y>
-      <width>113</width>
-      <height>32</height>
+      <x>1210</x>
+      <y>710</y>
+      <width>141</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton{
-background-color:rgb(73,133,168);
-color: white;
-}</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Next</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="mainMenu_button">
     <property name="geometry">
      <rect>
-      <x>132</x>
-      <y>20</y>
-      <width>121</width>
-      <height>32</height>
+      <x>100</x>
+      <y>710</y>
+      <width>181</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton{
-background-color:rgb(73,133,168);
-color:white;
-
-}</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Main Menu</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="submit_button">
+    <property name="geometry">
+     <rect>
+      <x>1000</x>
+      <y>710</y>
+      <width>161</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>Submit</string>
     </property>
    </widget>
   </widget>
